Replace new <WrapperType>(x) with <WrapperType>.valueOf(<x>)
It's by far the noisiest of the Java 11 warnings, and can mostly be dealt
with by:

find . -name '*.java' | xargs -n1 perl -pi -e \
 's/new (Boolean|Byte|Character|Char|Short|Integer|Long|Float|Double)\(/$1.valueOf(/;'