@@ -133,7 +133,7 @@ public class DocumentTokenizer
 
 	public static boolean isSeparator( char ch )
 	{
-		return separatorHashMap.containsKey( new Character( ch ) );
+		return separatorHashMap.containsKey( Character.valueOf( ch ) );
 	}
 
 	/** Creates word separator hash map from list of separator characters.
@@ -148,7 +148,7 @@ public class DocumentTokenizer
 	{
 		for ( int i = 0; i < WORD_SEPARATOR_CHARACTERS.length; i++ )
 		{
-			Character cCh	= new Character( WORD_SEPARATOR_CHARACTERS[ i ] );
+			Character cCh	= Character.valueOf( WORD_SEPARATOR_CHARACTERS[ i ] );
 			separatorHashMap.put( cCh  , cCh );
 		}
 	}
