@@ -186,7 +186,7 @@ public class TotalWordFormCount
 
 	public String toString()
 	{
-		return new Integer( wordFormCount ).toString();
+		return Integer.valueOf( wordFormCount ).toString();
 	}
 }
 
